--- a/talawa_lint/pubspec.yaml
+++ b/talawa_lint/pubspec.yaml
@@ -8,8 +8,7 @@ dev_dependencies:
 
 dependencies:
   # we will use analyzer for inspecting Dart files
-  _fe_analyzer_shared: any
-  # _fe_analyzer_shared: ^61.0.0
+  _fe_analyzer_shared: ^61.0.0
   analyzer: ">=5.12.0 <=7.3.0"
   analyzer_plugin: ^0.11.0
   args: ^2.4.2
