--- a/talawa_lint/pubspec.yaml
+++ b/talawa_lint/pubspec.yaml
@@ -5,16 +5,15 @@ environment:
 
 dev_dependencies:
   lint: ^2.3.0
+  args: ^2.4.2
 
 dependencies:
   # we will use analyzer for inspecting Dart files
-  _fe_analyzer_shared: ^76.0.0
   analyzer: ">=5.12.0 <=7.3.0"
   analyzer_plugin: ^0.11.0
-  args: ^2.4.2
   # args:
   
   # custom_lint_builder will give us tools for writing lints
-  custom_lint: 0.7.0
-  custom_lint_builder: ^0.7.0
+  custom_lint: ^0.7.0
+  custom_lint_builder: 0.7.0
   # watcher: ^1.1.0
