--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.talawa"
-        minSdkVersion 22
+        minSdkVersion flutter.minSdkVersion
 
         targetSdkVersion 36
         versionCode flutterVersionCode.toInteger()
