--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,7 +81,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.5.4
-  custom_lint: 0.7.0
+  custom_lint: ^0.7.0
   fake_async: ^1.3.1
   flutter_test:
     sdk: flutter
