--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <=3.6.2"
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   ############# Remove ###########
@@ -55,7 +55,7 @@ dependencies:
   http: ^1.3.0
   image_cropper: 9.1.0
   image_picker: ^1.1.2
-  intl: ^0.19.0
+  intl: ">=0.19.0"
   json_annotation: ^4.7.0
   mockito: ^5.4.4
   network_image_mock: ^2.1.1
@@ -81,7 +81,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.15
-  custom_lint: 0.7.0
+  custom_lint: ^0.7.0
   fake_async: ^1.3.1
   flutter_test:
     sdk: flutter
