--- a/talawa_lint/pubspec.yaml
+++ b/talawa_lint/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   
   # custom_lint_builder will give us tools for writing lints
   args: ^2.4.2
-  custom_lint: 0.6.4 
-  custom_lint_builder: 0.6.4 
+  custom_lint: ^0.6.4
+  custom_lint_builder: ^0.6.4 
   # watcher: ^1.1.0
   
