Feat : Restore Dynamic Server URL Input Feature (#3079)
* feat: restore dynamic URL input screen and remove hardcoded .env dependency

* feat: remove .env.example file and update installation instructions for API URL setup

- Increase code coverage.
- Implement code rabbit suggestions.

* feat: remove .env.example copying from workflows and improve URL handling in GraphQL config

* feat: enhance URL validation and update test cases for consistency

* feat: improve URL validation logic and enhance test coverage for invalid URLs

* feat: improve URL validation tests and enhance button color fallback logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   plugin_platform_interface: ^2.1.7
   pointycastle: ^4.0.0
   provider: ^6.1.5
+  qr_code_scanner_plus: ^2.0.14
+  qr_flutter: ^4.1.0
   quick_actions: ^1.1.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
@@ -105,7 +107,6 @@ flutter:
     - assets/images/
     - assets/icons/
     - lang/
-    - .env
   fonts:
     - family: product-sans
       fonts:
