--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -58,10 +58,10 @@ jobs:
         run: chmod +x ./.github/workflows/scripts/check_ignore.py
       - name: Run check_ignore
         run: |
-          if [[ -n "$(git status --porcelain pubspec.lock)" ]]; then
-            echo "Uncommitted changes detected in pubspec.lock. Stashing just that file..."
-            git stash push -u -- "pubspec.lock"
-          fi
+         if [[ -n "$(git status --porcelain)" ]]; then
+         echo "Uncommitted changes detected.  Stashing changes..."
+         git stash push -u -m "Auto-stash pubspec.lock files"
+          fi 
           git branch
           git checkout -b temp_branch
           git branch
