fix: add stash pop error handling and correct ** glob pattern conversion

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -74,7 +74,7 @@ jobs:
           python ./.github/workflows/scripts/check_ignore.py --repository "$GITHUB_REPOSITORY" --merge_branch_name "$GITHUB_HEAD_REF"
           if git stash list | grep -q "stash@{0}"; then
             echo "Restoring stashed changes..."
-            git stash pop
+            git stash pop || echo "Warning: Could not restore stash automatically. Please resolve manually."
           fi
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
@@ -147,8 +147,8 @@ jobs:
           # Check for changes in sensitive files
           CHANGED_UNAUTH_FILES=""
           for pattern in $SENSITIVE_FILES; do
-            # Convert glob patterns to regex: *.pem → \.pem$, escape dots
-            regex_pattern=$(echo "$pattern" | sed -E 's/\./\\./g; s/\*/[^/]*/g; s/\?/./g')
+            # Convert glob patterns to regex: escape dots, ** → .*, * → [^/]*
+            regex_pattern=$(echo "$pattern" | sed -E 's/\./\\./g; s/\*\*/DOUBLE_STAR/g; s/\*/[^/]*/g; s/DOUBLE_STAR/.*/g; s/\?/./g')
             FILES=$(git diff --name-only --diff-filter=ACMRD $BASE_SHA ${{ github.event.pull_request.head.sha }} | grep -E "$regex_pattern" || true)
 
             if [ ! -z "$FILES" ]; then
