--- a/talawa_lint/pubspec.yaml
+++ b/talawa_lint/pubspec.yaml
@@ -9,7 +9,7 @@ dev_dependencies:
 dependencies:
   # we will use analyzer for inspecting Dart files
   # _fe_analyzer_shared: ^61.0.0
-  analyzer: ">=5.12.0 <=7.3.0"
+  analyzer: ">=6.4.0 <7.0.0"
   analyzer_plugin: ^0.11.0
   # args:
   
