--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -247,15 +247,22 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
-          # Use a dedicated branch for doc updates to avoid direct commits to the running branch
-          DOCS_BRANCH="docs/update-${{ github.run_id }}"
-          git checkout -b $DOCS_BRANCH
+          # Use a deterministic branch for doc updates to allow consolidation
+          # Clean ref_name to ensure valid branch name (though git refs usually are safe, simple precaution)
+          DOCS_BRANCH="docs/auto-update-${{ github.ref_name }}"
           
+          # Checkout new branch (orphaned or based on current doesn't strictly matter for docs, 
+          # but basing on current ensures history continuity if merged)
+          git checkout -b $DOCS_BRANCH 2>/dev/null || git checkout $DOCS_BRANCH
+          
+          # Reset to the generated state
           git add -A docs/docs/auto-docs
+          
           if ! git diff --cached --quiet; then
-            git commit -m "docs: update automated documentation [skip ci]"
-            # Push to the new branch
-            git push origin $DOCS_BRANCH
+            git commit -m "docs: update automated documentation for ${{ github.ref_name }} [skip ci]"
+            
+            # Force push to update the branch pointer, effectively "consolidating" updates
+            git push -f origin $DOCS_BRANCH
             echo "::notice::Documentation updates pushed to branch $DOCS_BRANCH"
           else
             echo "No changes to documentation."
