--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -91,7 +91,7 @@ jobs:
     if: ${{ github.actor != 'dependabot[bot]' }}
     name: Testing codebase
     runs-on: ubuntu-latest
-    needs: [Flutter-Codebase-Check, Update-Documentation]
+    needs: Flutter-Codebase-Check
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
