--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -269,10 +269,10 @@ jobs:
           # Sanitize ref_name to ensure valid branch name:
           # 1. Lowercase
           # 2. Replace invalid chars (~^:?*[\]\ ) with -
-          # 3. Collapse multiple -
-          # 4. Remove leading/trailing -
+          # 3. Collapse multiple - and .
+          # 4. Remove leading/trailing - and .
           REF_NAME="${{ github.ref_name }}"
-          SAFE_REF_NAME=$(echo "$REF_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9._-]/-/g' | tr -s '-' | sed 's/^-//;s/-$//')
+          SAFE_REF_NAME=$(echo "$REF_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9._-]/-/g' | tr -s '-' | tr -s '.' | sed 's/^[-.]*//;s/[-.]*$//')
           # Fallback to 'detached' if empty
           SAFE_REF_NAME="${SAFE_REF_NAME:-detached}"
           
@@ -295,7 +295,7 @@ jobs:
             git commit -m "docs: update automated documentation for ${{ github.ref_name }} [skip ci]"
             
             # Force push with lease to update the branch pointer safely
-            git push --force-with-lease origin $DOCS_BRANCH
+            git push --force-with-lease origin "$DOCS_BRANCH"
             echo "::notice::Documentation updates pushed to branch $DOCS_BRANCH"
           else
             echo "No changes to documentation."
