--- a/.github/workflows/check_unused_deps.yml
+++ b/.github/workflows/check_unused_deps.yml
@@ -29,4 +29,4 @@ jobs:
         run: flutter pub get
 
       - name: Run dependency validator
-        run: flutter pub run dependency_validator
+        run: dart run dependency_validator
