chore: configure dependency validator, cleanup dependencies, and update CI

--- a/dart_dependency_validator.yaml
+++ b/dart_dependency_validator.yaml
@@ -12,4 +12,5 @@ ignore:
   - mocktail_image_network # Test utilities
   - talawa_lint # Lints only
   - permission_handler # Platform-interface or plugin internals
+  - image_cropper_platform_interface # Transitive dependency used in mocks
   - url_launcher_platform_interface # Platform-interface or plugin internals
