--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -301,7 +301,7 @@ jobs:
   Flutter-Testing:
     name: Testing codebase
     runs-on: ubuntu-latest
-    needs: [Flutter-Codebase-Check, Python-Compliance]
+    needs: [Flutter-Codebase-Check, Python-Compliance, check-unused-dependencies]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
