fix(ci): activate venv before running check_docstrings.py

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -446,6 +446,9 @@ jobs:
           source venv/bin/activate
           pydocstyle --convention=google --add-ignore=D415,D205 .github scripts
 
+      - name: Run docstring compliance check
+        run: |
+          source venv/bin/activate
           python .github/workflows/scripts/check_docstrings.py --directories .github scripts
 
   check-unused-dependencies:
