--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -463,6 +463,10 @@ jobs:
           flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: "stable"
       
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
       - name: Activate dart_doc_markdown
         run: dart pub global activate dart_doc_markdown
         
