--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,36 +20,28 @@ dependencies:
   ################################
 
   app_links: ^6.4.1
-  app_links_platform_interface: ^2.0.2
   auto_size_text: ^3.0.0
   cached_network_image: ^3.4.1
-  clock: ^1.1.1
   connectivity_plus: ^6.1.5
   contained_tab_bar_view: ^0.8.0
 
   crypto: ^3.0.5
-  cupertino_icons: ^1.0.8
   currency_picker: ^2.0.21
   ############## Remove ##########
 
   # custom_lint_builder: ^0.4.0
   ################################
   delightful_toast: ^1.1.0
-  file: ^7.0.1
 
   flutter:
     sdk: flutter
   flutter_cache_manager: ^3.4.1
   flutter_dotenv: ^6.0.0
   flutter_image_compress: ^2.4.0
-  flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
-  flutter_reaction_button: ^3.0.0+3
   flutter_secure_storage: ^9.2.4
-  flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.2.3
-  font_awesome_flutter: ^10.9.1
   get_it: ^9.1.1
   graphql_flutter: ^5.2.1
   hive: ^2.2.3
@@ -57,12 +49,9 @@ dependencies:
   image_cropper: ^11.0.0
   image_picker: ^1.2.0
   intl: ^0.20.0
-  json_annotation: ^4.7.0
   mockito: ^5.4.4
-  network_image_mock: ^2.1.1
   path_provider: ^2.1.5
-  permission_handler: 12.0.1
-  plugin_platform_interface: ^2.1.7
+
   pointycastle: ^4.0.0
   provider: ^6.1.5
   qr_code_scanner_plus: ^2.0.14
@@ -70,7 +59,6 @@ dependencies:
   quick_actions: ^1.1.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
-  stack_trace: ^1.11.1
   syncfusion_flutter_calendar: ^30.2.6
   syncfusion_flutter_datepicker: ^30.2.6
   timelines_plus: ^1.0.7
@@ -82,11 +70,20 @@ dependencies:
   visibility_detector: ^0.4.0+2
 
 dev_dependencies:
+  _fe_analyzer_shared: ^76.0.0
+  analyzer: ^6.11.0
+  analyzer_plugin: ^0.11.3
+  args: ^2.7.0
   build_runner: ^2.5.4
+  clock: ^1.1.2
   custom_lint: 0.7.0
+  custom_lint_builder: ^0.7.0
+  dependency_validator: ^4.1.3
   fake_async: ^1.3.1
+  file: ^7.0.1
   flutter_test:
     sdk: flutter
+  graphql: ^5.2.3
   hive_generator: ^2.0.1
 
   integration_test:
@@ -95,6 +92,9 @@ dev_dependencies:
   lint: ^2.7.0
 
   mocktail_image_network: ^1.2.0
+  network_image_mock: ^2.1.1
+  normalize: ^0.9.1
+  plugin_platform_interface: ^2.1.8
   talawa_lint:
     path: talawa_lint/
 
