--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.1.0
+  flutter_dotenv: ^5.1.0
+  flutter_image_compress: ^2.1.0
   font_awesome_flutter: ^10.8.0
   get_it: ^8.0.3
   graphql_flutter: ^5.2.0-beta.8
@@ -81,9 +83,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.15
-  custom_lint: 0.6.4
+  custom_lint: ^0.6.6
   fake_async: ^1.3.1
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
   hive_generator: ^2.0.1
 
@@ -119,8 +123,7 @@ flutter:
           weight: 800
 
 dependency_overrides:
-  analyzer: ">=6.4.0 <7.0.0"  # Pin for talawa_lint analyzer 6.x API compatibility; remove when talawa_lint/analyzer can move to 7+
-  custom_lint: 0.6.4  # Pin to keep workspace on the same custom_lint as talawa_lint; upgrade to 0.8.x after plugin update
-  custom_lint_builder: 0.6.4  # Match custom_lint version for plugin build tooling; remove after coordinated upgrade
+  analyzer: 6.4.1  # Pin to ensure compatibility with custom_lint 0.6.6 and hive_generator 2.0.1
+  custom_lint_builder: ^0.6.6  # Match custom_lint version
   rxdart: 0.27.7  # Transitive via graphql_flutter/gql; pinned for deterministic resolution. Re-evaluate after graphql stack upgrade
   intl: 0.20.2  # Used widely for date/time/number formatting; pinned to current verified version. Revisit in follow-up 
