--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,14 +72,13 @@ dependencies:
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   stack_trace: ^1.11.1
-  syncfusion_flutter_calendar: ^30.2.6
-  syncfusion_flutter_datepicker: ^30.2.6
-  timelines_plus: ^1.0.7
-  tutorial_coach_mark: ^1.3.1
-  url_launcher: ^6.3.2
-  uuid: ^4.5.1
-  vibration: ^3.1.5
-  video_player: ^2.10.0
+  syncfusion_flutter_calendar: ^28.2.12
+  syncfusion_flutter_datepicker: ^28.2.3
+  timelines_plus: ^1.0.6
+  tutorial_coach_mark: ^1.3.0
+  url_launcher: ^6.3.1
+  vibration: ^2.0.1
+  video_player: ^2.9.3
   visibility_detector: ^0.4.0+2
 
 dev_dependencies:
@@ -124,7 +123,15 @@ flutter:
           weight: 800
 
 dependency_overrides:
-  analyzer: 6.4.1  # Pin to ensure compatibility with custom_lint 0.6.6 and hive_generator 2.0.1
-  custom_lint_builder: ^0.6.6  # Match custom_lint version
+  # TODO: Remove this section once hive_generator supports analyzer ^7.0.0 or switch to alternative code generation
+  # TRACKING: https://github.com/PalisadoesFoundation/talawa/issues/2992
+  # This is a temporary workaround for the hive_generator 2.0.1 constraint (requires analyzer <7.0.0)
+  # which conflicts with custom_lint 0.7.0+ (requires analyzer ^7.0.0).
+  # Solution paths:
+  # 1. Fork hive_generator to support analyzer 7.x
+  # 2. Migrate to alternative code generation (e.g., freezed, json_serializable for persistence)
+  # 3. Wait for hive_generator release supporting analyzer 7.x
+  analyzer: 6.4.0  # Pinned to maintain compatibility with custom_lint 0.6.6 and hive_generator 2.0.1
+  custom_lint_builder: ^0.6.6  # Matches custom_lint 0.6.6 version
   rxdart: 0.27.7  # Transitive via graphql_flutter/gql; pinned for deterministic resolution. Re-evaluate after graphql stack upgrade
   intl: 0.20.2  # Used widely for date/time/number formatting; pinned to current verified version. Revisit in follow-up 
