--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,16 @@
   "workspaceFolder": "/home/flutteruser/app",
   "remoteUser": "flutteruser",
   "forwardPorts": [8080],
-  "postCreateCommand": "flutter pub get"
+  "postCreateCommand": "flutter pub get",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "Dart-Code.flutter",
+        "Dart-Code.dart-code"
+      ],
+      "settings": {
+        "dart.flutterSdkPath": "/flutter"
+      }
+    }
+  }
 }
